syntax = "proto3";

import "google/protobuf/empty.proto";

package common;

option go_package = "/";

service Paxos {
  rpc ProcessTxn(common.TxnSet) returns (google.protobuf.Empty);
  rpc EnqueueTxn(common.TxnRequest) returns (google.protobuf.Empty);
  rpc Prepare(common.Prepare) returns (google.protobuf.Empty);
  rpc Promise(common.Promise) returns (google.protobuf.Empty);
  rpc Accept(common.Accept) returns (google.protobuf.Empty);
  rpc Accepted(common.Accepted) returns (google.protobuf.Empty);
  rpc Commit(common.Commit) returns (google.protobuf.Empty);
  rpc Sync(common.SyncRequest) returns (google.protobuf.Empty);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc GetServerBalance(common.GetServerBalanceRequest) returns (GetServerBalanceResponse);
}

message TxnSet {
  int32 SetNo = 1;
  repeated TxnRequest Txns = 2;
  repeated string LiveServers = 3;
}

message TxnRequest {
  string msgID = 1;
  string sender = 2;
  string receiver = 3;
  float amount = 4;
  int32 term = 5;
}

message Ballot {
  int32 termNumber = 1;
  int32 serverNumber = 2;
}

message Prepare {
  Ballot ballotNum = 1;
  int32 LastCommittedTerm = 2;
}

message Promise {
  bool promiseAck = 1;
  int32 serverNumber = 2;
  Ballot ballotNum = 3;
  Ballot acceptNum = 4;
  repeated TxnRequest acceptVal = 5;
  repeated TxnRequest localVal = 6;
}

message Accept {
  Ballot ballotNum = 1;
  repeated TxnRequest acceptVal = 2;
  repeated string serverAddresses = 3;
}

message Accepted {
  Ballot ballotNum = 1;
  repeated TxnRequest acceptVal = 2;
  int32 serverNumber = 3;
}

message Commit {
  Ballot ballotNum = 1;
  repeated TxnRequest acceptVal = 2;
  repeated string serverAddresses = 3;
  int32 LastCommittedTerm = 4;
}

message SyncRequest {
  int32 LastCommittedTerm = 1;
  int32 ServerNo = 2;
}

message GetBalanceRequest{
  string user = 1;
}

message GetBalanceResponse {
  float balance = 1;
}

message GetServerBalanceRequest{
  int32 LastCommittedTerm = 1;
  string user = 2;
}

message GetServerBalanceResponse{
  Ballot ballotNum = 1;
  repeated TxnRequest NewTxns = 2;
  float balance = 3;
}